--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,7 @@
 # set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # Better prefix
-set -g prefix C-s
+set -g prefix C-a
 unbind-key C-b
 
 # Setup 'v' to begin selection as in Vim
@@ -25,6 +25,10 @@ bind -r M-h resize-pane -L 2
 bind -r M-k resize-pane -U 2
 bind -r M-j resize-pane -D 2
 bind -r M-l resize-pane -R 2
+
+# reload configs
+unbind r
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 unbind-key %                                                # Unbind old horizontal
 bind-key % split-window -c "#{pane_current_path}"           # Horizontal current path
