more tmux changes

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,10 @@
 # Better prefix
 set -g prefix C-a
 unbind-key C-b
+bind C-a send-prefix
+
+# restore clearing screen
+bind C-l send-keys 'C-l'
 
 # Setup 'v' to begin selection as in Vim
 bind-key -T copy-mode-vi 'v' send -X begin-selection
@@ -27,20 +31,38 @@ bind -r M-j resize-pane -D 2
 bind -r M-l resize-pane -R 2
 
 # reload configs
-unbind r
+unbind-key r
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-unbind-key %                                                # Unbind old horizontal
-bind-key % split-window -c "#{pane_current_path}"           # Horizontal current path
-
-unbind-key '"'                                              # Unbind old vertical
-bind-key '"' split-window -hc "#{pane_current_path}" -l 80  # Vertical current path, 80 width
 
 unbind-key c                                                # Unbind old create
 bind-key c new-window -c "#{pane_current_path}"             # Create current path
 
-bind-key r resize-pane -x 80    # Resize pane to 80 chars
-bind-key k clear-history        # Clear Screen
+# 25% horizontal split
+unbind ^T
+bind ^T split-window -p 25 -c '#{pane_current_path}'
+
+# 30% vertical split
+unbind ^U
+bind ^U split-window -h -p 30 -c '#{pane_current_path}'
+
+# horizontal and vertical splits
+unbind |
+bind | split-window -h -c '#{pane_current_path}'
+unbind _
+bind _ split-window -v -c '#{pane_current_path}'
+
+unbind Right
+bind Right resize-pane -R 8
+unbind Left
+bind Left resize-pane -L 8
+unbind Up
+bind Up resize-pane -U 4
+unbind Down
+bind Down resize-pane -D 4
+
+# zoom into current pane, repeating will unzoom
+unbind +
+bind + resize-pane -Z
 
 # Set default terminal for colors
 set -g default-terminal "screen-256color"
