--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,3 @@
-# Fix copy/paste issues
-# set-option -g default-command "reattach-to-user-namespace -l zsh"
-
 # Better prefix
 set -g prefix C-a
 unbind-key C-b
@@ -18,11 +15,20 @@ unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel "pbcopy"
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "pbcopy"
 
-# Vim pane navigation
-bind -n C-h select-pane -L
-bind -n C-j select-pane -D
-bind -n C-k select-pane -U
-bind -n C-l select-pane -R
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind-key -T copy-mode-vi C-h select-pane -L
+bind-key -T copy-mode-vi C-j select-pane -D
+bind-key -T copy-mode-vi C-k select-pane -U
+bind-key -T copy-mode-vi C-l select-pane -R
+bind-key -T copy-mode-vi C-\ select-pane -l
 
 # Resize in smaller increments
 bind -r M-h resize-pane -L 2
@@ -65,7 +71,7 @@ unbind +
 bind + resize-pane -Z
 
 # Set default terminal for colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 set -g base-index 1                         # 1 indexed, for keyboards
 set -sg escape-time 0                       # No escape time
